compatibility for 1.8, fast rendering, plugin version increase